samples/_failures_safe/1761374752_f4a6c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_380cfa15.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_380cfa15.c:166:5: error: expected ‘,’ or ‘;’ at end of input
  166 |     int valid = 1
      |     ^~~
./samples/SAFE/__tmp_380cfa15.c:166:5: error: expected declaration or statement at end of input
